Bug 139056 Compile errors against Foundation 1.0: org.eclipse.update.core